// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots COMPONENTS|Layout/Fluid layout Aside on top with beforeSection prop 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  width: 1176px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 870px;
}

.c3 {
  width: 252px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 42px;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    margin: 0;
    width: auto;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (max-width:1199px) {
  .responsive .c2,
  .responsive-booking .c2 {
    max-width: none;
    width: 100%;
  }
}

@media screen and (max-width:1199px) {
  .responsive .c3,
  .responsive-booking .c3 {
    width: auto;
    margin-left: 0;
  }
}

<div
  className="c0 responsive"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Layout/Fluid layout Single column 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  margin: 0 auto;
  max-width: 966px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    margin: 0 18px;
  }
}

@media screen and (min-width:1000px) {
  .c1.c1 {
    margin: 0 auto;
  }
}

<div
  className="c0 responsive"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="c1"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "background": "rgba(35, 194, 86, .4)",
            "display": "flex",
            "height": 140,
            "justifyContent": "center",
          }
        }
      >
        Main content
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots COMPONENTS|Layout/Fluid layout Two columns 1`] = `
.c0 {
  font: 400 16px / 20px 'KB Source Sans Pro','Source Sans Pro';
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 *,
.c0 *:before,
.c0 *:after {
  box-sizing: border-box;
}

.c1 {
  width: 1176px;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  max-width: 870px;
}

.c3 {
  width: 252px;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 42px;
}

@media screen and (max-width:1199px) {
  .responsive .c1,
  .responsive-booking .c1 {
    margin: 0;
    width: auto;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (max-width:1199px) {
  .responsive .c2,
  .responsive-booking .c2 {
    max-width: none;
    width: 100%;
  }
}

@media screen and (max-width:1199px) {
  .responsive .c3,
  .responsive-booking .c3 {
    width: auto;
    margin-left: 0;
  }
}

<div
  className="c0 responsive"
>
  <div
    style={
      Object {
        "width": "100vw",
      }
    }
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(35, 194, 86, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Main content
        </div>
      </div>
      <div
        className="c3"
      >
        <div
          style={
            Object {
              "alignItems": "center",
              "background": "rgba(230, 73, 38, .4)",
              "display": "flex",
              "height": 140,
              "justifyContent": "center",
            }
          }
        >
          Sidebar
        </div>
      </div>
    </div>
  </div>
</div>
`;
